--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,14 @@
               "src/assets"
             ],
             "styles": [
-							"src/styles.css",
-							"node_modules/bootstrap/dist/css/bootstrap.min.css"
+							"node_modules/bootstrap/dist/css/bootstrap.min.css",
+							"src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"]
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -127,5 +128,10 @@
       }
     }
   },
-  "defaultProject": "recipe-book"
+  "defaultProject": "recipe-book",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
